fixed spacing issue on resume page

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,9 @@
         border: solid rgb(5, 4, 75) 4px;
         border-radius: 10px;
         padding-right: 30px;
+        padding-left: 30px;
         margin-top: 20px;
+        margin-bottom: 20px;
     }
 }
 
